--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,23 +2,23 @@ appdirs==1.4.4
 asgiref==3.3.4; python_version >= "3.6"
 attrs==20.3.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 black==22.3.0; python_full_version >= "3.6.2"
-blinker==1.6.2; python_version >= "3.8"
-brotli==1.0.9; python_version >= "3.7"
-build==0.10.0; python_version >= "3.7" and python_version < "4.0"
-cachecontrol==0.12.14; python_version >= "3.7" and python_version < "4.0"
+blinker==1.6.3; python_version >= "3.8"
+brotli==1.1.0; python_version >= "3.7"
+build==0.10.0; python_version >= "3.8" and python_version < "4.0"
+cachecontrol==0.12.14; python_version >= "3.8" and python_version < "4.0"
 certifi==2023.7.22; python_version >= "3.6"
-cffi==1.15.1
+cffi==1.16.0
 cfgv==3.2.0; python_full_version >= "3.6.1"
 chardet==4.0.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
-charset-normalizer==3.2.0; python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.7.0" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7")
-cleo==2.0.1; python_version >= "3.7" and python_version < "4.0"
-click==8.1.6; python_version >= "3.7"
+charset-normalizer==3.3.0; python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.7.0" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7")
+cleo==2.0.1; python_version >= "3.8" and python_version < "4.0"
+click==8.1.7; python_version >= "3.7"
 colorama==0.4.6; platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.7.0" and sys_platform == "win32" and python_version < "4.0" and os_name == "nt" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7")
 configargparse==1.4.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 convertdate==2.3.2; python_version >= "3.5"
 coverage==5.5; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0" and python_version < "4")
-crashtest==0.4.1; python_version >= "3.7" and python_version < "4.0"
-cryptography==41.0.3; python_version >= "3.7"
+crashtest==0.4.1; python_version >= "3.8" and python_version < "4.0"
+cryptography==41.0.4; python_version >= "3.7"
 defusedxml==0.6.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 diff-match-patch==20200713; python_version >= "2.7"
 distlib==0.3.7
@@ -31,51 +31,50 @@ django-reversion==3.0.9; python_version >= "3.6"
 django-simple-history==3.0.0; python_version >= "3.6"
 django-staff-sso-client==3.1.1
 django-webpack-loader==1.0.0
-django==3.2.20; python_version >= "3.6"
+django==3.2.22; python_version >= "3.6"
 djangorestframework==3.12.4; python_version >= "3.5"
-dulwich==0.21.5; python_version >= "3.7" and python_version < "4.0"
+dulwich==0.21.6; python_version >= "3.8" and python_version < "4.0"
 elastic-apm==6.2.3; python_version >= "3.6" and python_version < "4"
 et-xmlfile==1.0.1
-exceptiongroup==1.1.2; python_version < "3.11" and python_version >= "3.7" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7")
+exceptiongroup==1.1.3; python_version < "3.11" and python_version >= "3.7" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7")
 factory-boy==3.2.1; python_version >= "3.6"
 faker==6.0.0; python_version >= "3.6"
-filelock==3.12.2; python_version >= "3.7"
+filelock==3.12.4; python_version >= "3.8"
 flake8==4.0.1; python_version >= "3.6"
 flask-basicauth==0.2.0; python_version >= "3.7"
 flask-cors==4.0.0; python_version >= "3.7"
-flask==2.3.2; python_version >= "3.8"
-gevent==22.10.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_version > "3.5")
-geventhttpclient==2.0.9; python_version >= "3.7"
-greenlet==2.0.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
+flask==2.3.3; python_version >= "3.8"
+gevent==23.9.1; python_version >= "3.8"
+geventhttpclient==2.0.11; python_version >= "3.7"
+greenlet==3.0.0; python_version >= "3.7"
 gunicorn==20.0.4; python_version >= "3.4"
 hawkrest==1.0.1
 hijri-converter==2.1.3; python_version >= "3.6"
 holidays==0.10.5.2
-html5lib==1.1; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.5.0"
+html5lib==1.1; python_version >= "3.8" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.8" and python_version < "4.0" and python_full_version >= "3.5.0"
 identify==1.5.14; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 idna==2.10; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 importlib-metadata==4.4.0; python_version >= "3.6"
-importlib-resources==6.0.0; python_version >= "3.8" and python_version < "3.9"
 iniconfig==1.1.1
-installer==0.7.0; python_version >= "3.7" and python_version < "4.0"
+installer==0.7.0; python_version >= "3.8" and python_version < "4.0"
 itsdangerous==2.1.2; python_version >= "3.7"
 jaraco.classes==3.3.0; python_version >= "3.8" and python_version < "4.0"
 jdcal==1.4.1
 jeepney==0.8.0; python_version >= "3.7" and python_version < "4.0" and sys_platform == "linux"
 jinja2==3.1.2; python_version >= "3.7"
-jsonschema==4.17.3; python_version >= "3.7" and python_version < "4.0"
-keyring==23.9.3; python_version >= "3.7" and python_version < "4.0"
+jsonschema==4.17.3; python_version >= "3.8" and python_version < "4.0"
+keyring==23.9.3; python_version >= "3.8" and python_version < "4.0"
 korean-lunar-calendar==0.2.1
 kubi-ecs-logger==0.1.0; python_version >= "3.6" and python_version < "4"
-lockfile==0.12.2; python_version >= "3.7" and python_version < "4.0"
+lockfile==0.12.2; python_version >= "3.8" and python_version < "4.0"
 locust==2.15.1; python_version >= "3.7"
 markuppy==1.14
 markupsafe==2.1.3; python_version >= "3.7"
 marshmallow==3.6.1; python_version >= "3.5"
 mccabe==0.6.1; python_version >= "3.6"
 mohawk==1.1.0
-more-itertools==10.0.0; python_version >= "3.8" and python_version < "4.0"
-msgpack==1.0.5
+more-itertools==10.1.0; python_version >= "3.8" and python_version < "4.0"
+msgpack==1.0.7; python_version >= "3.8"
 mypy-extensions==0.4.4; python_version >= "2.7"
 nodeenv==1.5.0
 oauthlib==3.2.2; python_version >= "3.6"
@@ -84,19 +83,18 @@ openpyxl==3.0.10; python_version >= "3.6"
 packaging==20.9; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 pathspec==0.9.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 pep517==0.13.0; python_version >= "3.6"
-pexpect==4.8.0; python_version >= "3.7" and python_version < "4.0"
+pexpect==4.8.0; python_version >= "3.8" and python_version < "4.0"
 pip-tools==6.0.1; python_version >= "3.6"
-pkginfo==1.9.6; python_version >= "3.7" and python_version < "4.0"
-pkgutil-resolve-name==1.3.10; python_version >= "3.7" and python_version < "3.9"
-platformdirs==3.10.0; python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.6.2"
+pkginfo==1.9.6; python_version >= "3.8" and python_version < "4.0"
+platformdirs==3.11.0; python_version >= "3.8" and python_version < "4.0" and python_full_version >= "3.6.2"
 pluggy==0.13.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
-poetry-core==1.6.1; python_version >= "3.7" and python_version < "4.0"
-poetry-plugin-export==1.4.0; python_version >= "3.7" and python_version < "4.0"
+poetry-core==1.6.1; python_version >= "3.8" and python_version < "4.0"
+poetry-plugin-export==1.5.0; python_version >= "3.8" and python_version < "4.0"
 poetry==1.5.1; python_version >= "3.7" and python_version < "4.0"
 pre-commit==2.10.1; python_full_version >= "3.6.1"
 psutil==5.8.0; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 psycogreen==1.0.2
-psycopg2-binary==2.9.6; python_version >= "3.6"
+psycopg2-binary==2.9.9; python_version >= "3.7"
 ptyprocess==0.7.0; python_version >= "3.7" and python_version < "4.0"
 py==1.11.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 pycodestyle==2.8.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
@@ -104,7 +102,7 @@ pycparser==2.21
 pyflakes==2.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 pymeeus==0.5.12
 pyparsing==2.4.7; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
-pyproject-hooks==1.0.0; python_version >= "3.7" and python_version < "4.0"
+pyproject-hooks==1.0.0; python_version >= "3.8" and python_version < "4.0"
 pyrsistent==0.19.3; python_version >= "3.7" and python_version < "4.0"
 pytest-cov==2.12.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 pytest-django==4.1.0; python_version >= "3.5"
@@ -113,33 +111,33 @@ python-dateutil==2.8.2; (python_version >= "2.7" and python_full_version < "3.0.
 pytz==2020.5
 pywin32-ctypes==0.2.2; python_version >= "3.7" and python_version < "4.0" and sys_platform == "win32"
 pywin32==306; platform_system == "Windows" and python_version >= "3.7"
-pyyaml==5.4.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
+pyyaml==6.0.1; python_version >= "3.6"
 pyzmq==22.2.1; python_version >= "3.6"
-rapidfuzz==2.15.1; python_version >= "3.7" and python_version < "4.0"
+rapidfuzz==2.15.2; python_version >= "3.7" and python_version < "4.0"
 regex==2020.11.13
 requests-oauthlib==1.3.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
-requests-toolbelt==1.0.0; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.4.0"
+requests-toolbelt==1.0.0; python_version >= "3.8" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.8" and python_version < "4.0" and python_full_version >= "3.4.0"
 requests==2.31.0; python_version >= "3.7"
 roundrobin==0.0.4; python_version >= "3.7"
 secretstorage==3.3.3; python_version >= "3.7" and python_version < "4.0" and sys_platform == "linux"
 sentry-sdk==1.14.0
-shellingham==1.5.1; python_version >= "3.7" and python_version < "4.0"
+shellingham==1.5.3; python_version >= "3.8" and python_version < "4.0"
 six==1.15.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 sqlparse==0.4.4; python_version >= "3.5"
 tablib==3.0.0; python_version >= "3.6"
 text-unidecode==1.3
 toml==0.10.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
-tomli==2.0.1; python_version >= "3.7" and python_version < "3.11" and python_full_version >= "3.6.2" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7")
-tomlkit==0.12.1; python_version >= "3.7" and python_version < "4.0"
-trove-classifiers==2023.7.6; python_version >= "3.7" and python_version < "4.0"
+tomli==2.0.1; python_version >= "3.8" and python_version < "3.11" and python_full_version >= "3.6.2" and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7")
+tomlkit==0.12.1; python_version >= "3.8" and python_version < "4.0"
+trove-classifiers==2023.9.19; python_version >= "3.8" and python_version < "4.0"
 typed-ast==1.5.5; python_version >= "3.6"
 typing-extensions==3.10.0.2
-urllib3==1.26.16; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
-virtualenv==20.24.2; python_version >= "3.7"
+urllib3==1.26.17; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
+virtualenv==20.24.5; python_version >= "3.7"
 webencodings==0.5.1; python_version >= "3.7" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.5.0"
-werkzeug==2.3.6; python_version >= "3.8"
+werkzeug==2.3.7; python_version >= "3.8"
 whitenoise==5.2.0; python_version >= "3.5" and python_version < "4"
-xattr==0.10.1; python_version >= "3.7" and python_version < "4.0" and sys_platform == "darwin"
+xattr==0.10.1; python_version >= "3.8" and python_version < "4.0" and sys_platform == "darwin"
 xlrd==2.0.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 xlwt==1.3.0
 zipp==3.4.2; python_version >= "3.6"
